--- a/services/web/app/views/layout/navbar-marketing.pug
+++ b/services/web/app/views/layout/navbar-marketing.pug
@@ -159,6 +159,15 @@ nav.navbar.navbar-default.navbar-main(
 
 					// logged out
 					if !getSessionUser()
+            li
+              a(
+ 								href="/templates"
+								event-tracking="menu-click"
+								event-tracking-action="clicked"
+								event-tracking-trigger="click"
+								event-tracking-mb="true"
+								event-segmentation={ page: currentUrl, item: 'templates', location: 'top-menu' }
+							) #{translate('templates')}
 						// register link
 						if hasFeature('registration-page')
 							li.primary
